# transcode-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  RUST_MIGRATION.md  config.py  crud.py  database.py  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt  transcode.db
middleware/: auth.py
models/: __init__.py  credit_purchase.py  job.py  user.py
routers/: auth.py  billing.py  transcode.py
scripts/: migrate_add_segments.py  test_api.sh
services/: job_service.py  storage.py  transcoder.py  user_service.py
workers/: arq_worker.py  job_worker.py
