[project]
name = "transcode-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiosqlite==0.20.0",
    "email-validator==2.1.1",
    "fastapi==0.109.2",
    "httpx==0.26.0",
    "pydantic-settings==2.2.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.27",
    "stripe==8.5.0",
    "uvicorn[standard]==0.27.1",
]
