[project]
name = "transcode-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiosqlite==0.20.0",
    "arq>=0.26.1",
    "boto3>=1.34.0",
    "email-validator==2.1.1",
    "fastapi==0.109.2",
    "httpx==0.26.0",
    "pydantic-settings==2.2.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.27",
    "stripe==8.5.0",
    "uvicorn[standard]==0.27.1",
]

[dependency-groups]
dev = [
    "httpx>=0.26.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["config", "database", "models", "routers", "services", "workers", "middleware"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
